# test_2

./: README.md  apply_clang_format.sh
cli/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  listener_worker.h  log_worker.h  main.cpp  threadsafe_queue.h  worker.h
srv/src/: CMakeLists.txt  listener_worker.cpp  log_worker.cpp  main.cpp  worker.cpp
